--- a/src/app/error/error.component.html
+++ b/src/app/error/error.component.html
@@ -2,7 +2,7 @@
 
   <div class="container" fxFlex fxLayout="row wrap" fxLayout.lt-md="column" fxFlexFill>
     <div class="image" fxFlex>
-      <img class="error-image" src="/assets/images/mls-logo.svg" />
+      <img class="error-image" src="/assets/images/tdk-logo.svg" />
     </div>
     <div class="text error-message" fxFlex>
       <h2 class="mat-title">ERROR 404</h2>
