--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar class="app-header">
   <span class="logo">
     <button mat-button routerLink="/">
-      <mat-icon svgIcon="mls-logo" class="large"></mat-icon>
+      <mat-icon svgIcon="tdk-logo" class="large"></mat-icon>
     </button>
   </span>
 
