--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,7 +1,7 @@
-<div class="mls-intro middle">
-  <img class="mls-logo" alt="MLS Logo" src="assets/images/mls-logo.svg">
-  <h3>Die Musikgeschichte der Schweiz auf einen Klick: Das Musiklexikon der Schweiz (MLS)</h3>
-  <p>Warum ein neues Musiklexikon? Die Schweiz verfügt im Gegensatz zu anderen europäischen Ländern über kein modernes Nachschlagewerk zur Musikgeschichte. Die bestehenden Lexika sind veraltet und werden der Vielfalt und dem Reichtum des Musiklebens der Schweiz nicht gerecht. Ein neues, wissenschaftlich fundiertes Musiklexikon wird schon seit Jahrzehnten verlangt. Diese Forderung nach fundiertem Wissen über die Schweizer Musik hat mit dem 2012 in die Bundesverfassung aufgenommenen Artikel 67a zur Stärkung der musikalischen Bildung eine neue Aktualität gewonnen: Um die neue Verfassungsbestimmung umzusetzen braucht es ein zeitgemässes Informationssystem zur Schweizer Musikgeschichte auf wissenschaftlicher Basis.</p>
+<div class="tdk-intro middle">
+  <img class="tdk-logo" alt="TDK Logo" src="assets/images/tdk-logo.svg">
+  <h3>Sämtliche Daten des Tal der Könige - Projekts der Uni Basel.</h3>
+  <p>...</p>
 
   <div class="index" fxLayout="row" fxLayout.lt-sm="column" fxLayoutAlign="center" fxLayoutGap="3%">
     <button fxFlex mat-raised-button color="accent" class="index-btn" routerLink="/lexika">Lexikon</button>
