--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,19 +1,13 @@
 <div class="tdk-intro middle">
   <img class="tdk-logo" alt="TDK Logo" src="assets/images/tdk-logo.svg">
-  <h3>Sämtliche Daten des Tal der Könige - Projekts der Uni Basel.</h3>
-  <p>...</p>
+  <h3>Die Daten des Tal der Könige - Projekts der Uni Basel.</h3>
+  <p>...TODO</p>
 
   <div class="index" fxLayout="row" fxLayout.lt-sm="column" fxLayoutAlign="center" fxLayoutGap="3%">
-    <button fxFlex mat-raised-button color="accent" class="index-btn" routerLink="/lexika">Lexikon</button>
-    <button fxFlex mat-raised-button color="accent" class="index-btn" routerLink="/lemmata">Lemmata</button>
-    <button fxFlex mat-raised-button color="accent" class="index-btn" routerLink="/artikel">Artikel</button>
+    <button fxFlex mat-raised-button color="accent" class="index-btn" routerLink="/lage">Lage</button>
+    <button fxFlex mat-raised-button color="accent" class="index-btn" routerLink="/kampagne">Kampagne</button>
+    <button fxFlex mat-raised-button color="accent" class="index-btn" routerLink="/bild">Bild</button>
   </div>
 
-  <div class="sub-index" fxLayout="row" fxLayout.lt-sm="column" fxLayoutAlign="center" fxLayoutGap="3%">
-    <button fxFlex mat-stroked-button color="accent" class="sub-index-btn" routerLink="/bibliothek">Bibliothek</button>
-    <button fxFlex mat-stroked-button color="accent" class="sub-index-btn" routerLink="/ort">Ort</button>
-    <button fxFlex mat-stroked-button color="accent" class="sub-index-btn" routerLink="/taetigkeit">Tätigkeit</button>
-    <button fxFlex mat-stroked-button color="accent" class="sub-index-btn" routerLink="/">Exemplar</button>
-  </div>
 
 </div>
