--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
+<mat-toolbar>
+    <span class="fill-remaining-space"></span>
+    <a mat-button routerLink="search">Search</a>
+    <a mat-button routerLink="simple">Simple Search</a>
+</mat-toolbar>
 <router-outlet></router-outlet>
