--- a/src/app/simple-search/simple-search.component.html
+++ b/src/app/simple-search/simple-search.component.html
@@ -1,56 +1,29 @@
-<h3>Objektkategorie</h3>
-<div *ngIf="objectList">
-    <mat-form-field>
-        <mat-select #objectField>
-            <mat-option *ngFor="let node of objectList.children" [value]="node.id">{{node.label}} </mat-option>
-        </mat-select>
-    </mat-form-field>
-    <a class="button" mat-button (click)="objectSearch(objectField.value)">Suchen</a>
+<mat-form-field>
+  <mat-select #selection>
+    <mat-option *ngFor="let val of searchOptionsStrings; let i=index" [value]="i">{{storage.selectedLanguage == 0 ? val['en'] : val['de']}}</mat-option>
+  </mat-select>
+</mat-form-field>
+<div *ngIf="selection.value && selection.value !== 6 && selection.value !== 0">
+  <mat-form-field>
+    <textarea  #textField matInput ></textarea>
+  </mat-form-field>
+  <a class="button" mat-button (click)="searchRequested(selection.value, textField.value)">{{storage.selectedLanguage == 0 ? 'Search' : 'Suchen'}}</a>
 </div>
-<h3>Katalognummer</h3>
-<mat-form-field >
-    <textarea #catalogField matInput ></textarea>
-</mat-form-field>
-<a class="button" mat-button (click)="catalogSearch(catalogField.value)">Suchen</a>
-<h3>Abbildungsnummer</h3>
-<mat-form-field >
-    <textarea #figureField matInput ></textarea>
-</mat-form-field>
-<a class="button" mat-button (click)="figureSearch(figureField.value)">Suchen</a>
-<h3>Fundnummer</h3>
-<mat-form-field >
-    <textarea #findField matInput ></textarea>
-</mat-form-field>
-<a class="button" mat-button (click)="findSearch(findField.value)">Suchen</a>
-<h3>Studymaterialnummer</h3>
-<mat-form-field >
-    <textarea #smField matInput ></textarea>
-</mat-form-field>
-<a class="button" mat-button (click)="smSearch(smField.value)">Suchen</a>
-<h3>Gefässnummer</h3>
-<mat-form-field >
-    <textarea #potField matInput ></textarea>
-</mat-form-field>
-<a class="button" mat-button (click)="potSearch(potField.value)">Suchen</a>
-<h3>Lage</h3>
-<mat-form-field >
-    <textarea #locationGraveField matInput placeholder="Grab"></textarea>
-</mat-form-field>
-<mat-form-field >
-    <textarea #locationRoomField matInput placeholder="Raum"></textarea>
-</mat-form-field>
-<mat-form-field >
-    <textarea #locationSectionField matInput placeholder="Schnitt"></textarea>
-</mat-form-field>
-<a class="button" mat-button (click)="locationSearch(locationGraveField.value, locationRoomField.value, locationSectionField.value)">Suchen</a>
-<h3>Person</h3>
-<mat-form-field >
-    <textarea #personField matInput ></textarea>
-</mat-form-field>
-<a class="button" mat-button (click)="personSearch(personField.value)">Suchen</a>
+<div *ngIf="selection.value === 6">
+  <!-- TODO: Put map stuff -->
+  <p>Under Construction</p>
+</div>
+<div *ngIf="selection.value === 0">
+  <mat-form-field>
+    <mat-select #objectField>
+      <mat-option *ngFor="let node of objectList" [value]="node.id">{{getObjectLabel(node)}} </mat-option>
+    </mat-select>
+  </mat-form-field>
+  <a class="button" mat-button (click)="objectSearch(objectField.value)">Suchen</a>
+</div>
 <br>
 <div *ngIf="noResults">
-    <h3>Keine passenden Resultate gefunden</h3>
+    <h3>{{storage.selectedLanguage == 0 ? 'No results found' : 'Keine Resultate gefunden'}}</h3>
 </div>
 <div *ngFor="let result of results">
     <div *ngFor="let img of result.images">
@@ -58,4 +31,8 @@
         <a class="button" mat-button (click)="openResource(img.iri)">Details</a>
     </div>
 </div>
-<a class="button" mat-button *ngIf="moreToLoad()" (click)="loadMore()">Weitere Resultate</a>
+<a class="button" mat-button *ngIf="moreToLoad()" (click)="loadMore()">{{storage.selectedLanguage == 0 ? 'Load More' : 'Mehr laden'}}</a>
+
+<div *ngIf="objectList">
+
+</div>
